adapt to new constinious delivery